--- a/practicaSQLITE/package.json
+++ b/practicaSQLITE/package.json
@@ -2,12 +2,13 @@
   "name": "practicasqlite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "sqlite3": "^5.1.7"
   }
 }
